--- a/006 - Fish Game/style.css
+++ b/006 - Fish Game/style.css
@@ -17,4 +17,5 @@ body {
     width: 800px;
     height: 800px;
     border: 4px solid black;
+    background: linear-gradient(to bottom, lightblue, darkblue, black);
 }
