--- a/006 - Fish Game/style.css
+++ b/006 - Fish Game/style.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: steelblue;
+    background-color: navy;
 }
 
 #canvas1 {
@@ -18,4 +18,8 @@ body {
     height: 800px;
     border: 4px solid black;
     background: linear-gradient(to bottom, lightblue, darkblue, black);
+}
+
+.restartBtn:hover {
+    filter: brightness(1.2);
 }
