--- a/015 - Game/style.css
+++ b/015 - Game/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Creepster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Creepster&display=swap');
 
 * {
     margin: 0;
