--- a/016 - Steam Punk Game/style.css
+++ b/016 - Steam Punk Game/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -17,6 +19,7 @@ body {
     background: linear-gradient(to bottom, #3e6297, #5280c7);
     max-width: 100%;
     max-height: 100%;
+    font-family: 'Bangers', cursive;
 }
 
 img {
