--- a/019 - Bullseye Game/style.css
+++ b/019 - Bullseye Game/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Bangers', cursive;
 }
 
 body {
@@ -24,6 +27,6 @@ body {
     pointer-events: none;
 }
 
-#obstacles, #bull, #egg, #toad, #larva {
+#obstacles, #bull, #egg, #toad, #larva, #toads {
     display: none;
 }
