--- a/022 - Space Invaders/style.css
+++ b/022 - Space Invaders/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -15,4 +17,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     background: url('background.png');
+}
+
+img {
+    display: none;
 }
