--- a/025 - Space Shooter/style.css
+++ b/025 - Space Shooter/style.css
@@ -19,6 +19,8 @@ body {
     background: url(background1920x1080.png);
     background-size: cover;
     background-position: center;
+    width: 100%;
+    height: 100%;
 }
 
 .controls {
@@ -47,4 +49,12 @@ body {
     box-shadow: 4px 4px 4px black;
     text-shadow: 2px 2px 2px black;
     transform: scale(1.04) skew(3deg);
+}
+
+@media screen and (max-width: 900px) {
+    #canvas1 {
+        background: url('background1080x1920.png');
+        background-size: cover;
+        background-position: center;
+    }
 }
