--- a/026 - Steampunk Flappy Bird/style.css
+++ b/026 - Steampunk Flappy Bird/style.css
@@ -13,7 +13,10 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: navy;
     max-width: 100%;
     max-height: 100%;
+}
+
+.assets {
+    display: none;
 }
