--- a/026 - Steampunk Flappy Bird/style.css
+++ b/026 - Steampunk Flappy Bird/style.css
@@ -20,6 +20,33 @@ body {
     max-height: 100%;
 }
 
+.controls {
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+    display: flex;
+}
+
+.controls > button {
+    padding: 10px 15px;
+    background-color: transparent;
+    font: 22px Bangers;
+    border: 1px solid silver;
+    margin: 5px;
+    box-shadow: 1px 1px 1px black;
+    text-shadow: 1px 1px 1px black;
+    cursor: pointer;
+    font-family: "Bungee Spice", sans-serif;
+    transition: .3s;
+}
+
+.controls > button:is(:hover, :focus, :focus-visible) {
+    background-color: orange;
+    box-shadow: 4px 4px 4px black;
+    text-shadow: 2px 2px 2px black;
+    transform: scale(1.04) translateY(-4px);
+}
+
 .assets {
     display: none;
 }
