--- a/027 - Battle Snakes Arena/style.css
+++ b/027 - Battle Snakes Arena/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -16,4 +18,39 @@ body {
     background: url(./assets/grass_night.png);
     max-height: 100%;
     max-width: 100%;
+}
+
+#controls {
+    position: absolute;
+    top: 5px;
+    left: 50%;
+    translate: -50% 0;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.8);
+}
+
+#buttons {
+    width: 300px;
+    display: flex;
+    justify-content: space-around;
+}
+
+#buttons button {
+    background: black;
+    color: white;
+    width: 80px;
+    padding: 5px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    outline: none;
+    cursor: pointer;
+    transition: .2s;
+
+    &:is(:hover, :focus-visible) {
+        transform: scale(1.08);
+        box-shadow: inset 0 0 12px rgba(255, 255, 255, 0.4);
+    }
+
+    &:active {
+        transform: scale(1.05);
+    }
 }
