--- a/027 - Battle Snakes Arena/style.css
+++ b/027 - Battle Snakes Arena/style.css
@@ -21,6 +21,16 @@ body {
     max-width: 100%;
 }
 
+#canvas2 {
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+}
+
 #controls {
     position: absolute;
     top: 5px;
