--- a/032 - Bullet Race Game/style.css
+++ b/032 - Bullet Race Game/style.css
@@ -6,7 +6,7 @@
 
 body {
     background: linear-gradient(#111, #333, #111);
-    min-height: 100vh;
+    /* min-height: 100vh; */
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -98,6 +98,8 @@ button {
 .game-over {
     position: absolute;
     top: 40%;
+    left: 50%;
+    transform: translateX(-50%);
     background-color: red;
     width: 80%;
     padding: 10%;
