--- a/038 - Atari Breakout Game/style.css
+++ b/038 - Atari Breakout Game/style.css
@@ -97,3 +97,105 @@ canvas {
     font-size: 3em;
     font-family: 'Rajdhani', sans-serif;
 }
+
+#bottomMessage {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    font-size: 2em;
+    font-family: 'Rajdhani', sans-serif;
+    animation: blinkElement 1.5s linear infinite;
+}
+
+#infoButton {
+    position: absolute;
+    bottom: 5%;
+    right: 2.5%;
+    cursor: pointer;
+}
+
+#infoDiv {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    color: white;
+    font-family: 'Rajdhani', sans-serif;
+    background: rgb(54 69 79 / 0.6);
+    font-size: 1.25em;
+}
+
+#closeInfo {
+    position: absolute;
+    top: 8%;
+    right: 5%;
+    font-size: 5em;
+    color: rgb(250 206 250);
+    text-shadow: 0 0 10px rgb(150 150 150 / 1);
+    cursor: pointer;
+    transition: 0.2s;
+
+    &:hover {
+        scale: 1.03;
+    }
+}
+
+.infoTitle {
+    position: absolute;
+    top: 10%;
+    left: 5%;
+    font-size: 3em;
+    color: rgb(250 206 250);
+    text-shadow: 0 0 10px rgb(150 150 150 / 1);
+}
+
+#instructions {
+    position: absolute;
+    top: 20%;
+    left: 5%;
+    width: 90vw;
+    height: 500px;
+}
+
+#instructions span {
+    position: absolute;
+    margin-top: 60px;
+}
+
+#credits {
+    position: absolute;
+    top: 40%;
+    left: 5%;
+    width: 90vw;
+    height: 225px;
+}
+
+#credits span {
+    position: absolute;
+    margin-top: 50px;
+}
+
+#credits span a {
+    text-decoration: none;
+    color: rgb(250 206 250);
+    text-shadow: 0 0 10px rgb(150 150 150 / 1);
+}
+
+#soundButton {
+    position: absolute;
+    bottom: 12.5%;
+    right: 2.5%;
+    cursor: pointer;
+}
+
+@keyframes blinkElement {
+    50% {
+        opacity: 0.3;
+    }
+}
