--- a/038 - Atari Breakout Game/style.css
+++ b/038 - Atari Breakout Game/style.css
@@ -16,6 +16,7 @@ body {
     font-family: 'Rajdhani', sans-serif;
     color: white;
     font-size: 5em;
+    font-weight: bold;
     text-shadow: 0 0 10px rgb(150 150 150 / 1);
 }
 
@@ -71,7 +72,7 @@ canvas {
     z-index: 2;
     width: 100%;
     height: 100%;
-    background: rgb(41 0 24 / 0.7);
+    background: rgba(0, 0, 0, 0.2);
 }
 
 #centerSpan {
