--- a/040 - Circus Tightrope Game/style.css
+++ b/040 - Circus Tightrope Game/style.css
@@ -17,6 +17,7 @@ h1 {
     color: #ff0;
     text-shadow: 3px 3px 6px rgba(255, 255, 255, 0.4);
     text-align: center;
+    margin-bottom: 20px;
     transform-origin: bottom;
     animation: pulse 2s linear infinite;
 }
@@ -32,6 +33,7 @@ h1 {
     background: #222;
     border: 4px solid #bbb;
     border-radius: 12px;
+    text-align: center;
     /* display: none; */
 }
 
@@ -70,7 +72,7 @@ h1 {
 
 #stage {
     position: relative;
-    width: 100%;
+    /* width: 100%; */
     text-align: center;
 }
 
@@ -89,11 +91,9 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 
-    display: none;
-
     p {
-        margin-top: 20px;
         text-wrap: pretty;
+        line-height: 1.5;
     }
 }
 
