--- a/043 - Projectile Simulator/style.css
+++ b/043 - Projectile Simulator/style.css
@@ -6,15 +6,28 @@
 
 body {
     background-color: olivedrab;
-    min-height: 100vh;
+}
+
+h1 {
+    text-align: center;
+    margin-block: 3rem 1rem;
+}
+
+.btns {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    gap: 1.5rem;
 }
 
-.btns, .inputs {
-    margin: 20px;
+.inputs {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+label {
+    display: block;
 }
 
 input[type="number"] {
@@ -22,7 +35,6 @@ input[type="number"] {
     border: 2px solid #aaa;
     padding: 6px 12px;
     font-size: 1.1rem;
-    margin-bottom: 10px;
 }
 
 button {
@@ -60,13 +72,16 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
+    gap: 2rem;
+    margin-inline: 2rem;
 }
 
 .board {
     position: relative;
+    top: 3rem;
     margin: 20px;
     height: 450px;
+    width: 94%;
 }
 
 .board::before {
@@ -148,4 +163,42 @@ button {
     background-color: black;
     border-radius: 50%;
     z-index: -1;
+}
+
+.yDist {
+    position: absolute;
+    transform: translate(-50%, -110%);
+    background-color: black;
+    color: white;
+    padding: 5px;
+    font-size: 1.1em;
+}
+
+.yDist::before {
+    content: '';
+    position: absolute;
+    border: 10px solid black;
+    border-color: black transparent transparent transparent;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%, -100%);
+}
+
+.xDist {
+    position: absolute;
+    transform: translate(75%, 50%);
+    background-color: black;
+    color: white;
+    padding: 5px;
+    font-size: 1.1em;
+}
+
+.xDist::before {
+    content: '';
+    position: absolute;
+    border: 10px solid black;
+    border-color: transparent black transparent transparent;
+    left: 0;
+    bottom: 50%;
+    transform: translate(-100%, calc(-1px + 50%));
 }
